Add bibliography links

--- a/unit.tex
+++ b/unit.tex
@@ -76,6 +76,23 @@
     \item mockito usa inOrder
   \end{itemize} 
 \end{frame}
+%Review state verification _after the tests have run_
+%Behavior verification _checking to see if certain methods where invoked(matchers, etc)_
+
+%JMOCk: set up expectations, then execute and finally verify
+%Mockito verify mock invocation after the test is executed
+
+%Ver http://blog.trafficparrot.com/2014/05/do-you-have-problems-with-your-test.html
+%https://www.linkedin.com/pulse/what-difference-between-stub-mock-virtual-service-wojciech-bulaty
+
+%Spaceballs
+%https://www.linkedin.com/pulse/what-difference-between-stub-mock-virtual-service-wojciech-bulaty
+
+%http://www.vogella.com/tutorials/Mockito/article.html
+
+%ohttp://jmockit.org/MockingToolkitComparisonMatrix.html
+
+%http://blogs.justenougharchitecture.com/unit-testing-with-mocks-easymock-jmock-and-mockito/
 
 
 \fondoTitulo
